add new modification

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,10 @@
         <div class="columns-3xs">
           <div class="left">
             <img src="/src/img/Blue-Origin-Fams.png" alt="" />
+            <div class="card">
+              <p>Blue Origin Fams</p>
+              <p>Jakarta, Indonesia</p>
+            </div>
           </div>
           <div class="center">
             <img src="/src/img/Ocean-Land.png" alt="" />
